# exoskeleton_ros

./: LICENSE.md  README.md
docker/: Dockerfile  build_docker.sh  into_docker.sh  run_docker.sh
exoskeleton_control/: CMakeLists.txt  package.xml
exoskeleton_control/config/: controller.yaml
exoskeleton_control/launch/: exo_control.launch
exoskeleton_description/: CMakeLists.txt  package.xml
exoskeleton_description/controller/: ros_controller.urdf.xacro
exoskeleton_description/launch/: exo_left_upload.launch  exo_simple_upload.launch
exoskeleton_description/meshes/: base.FCStd  base.FCStd1  base.stl  base_bulk.FCStd  base_bulk.stl  base_short.FCStd  base_short.stl  link.FCStd  link.stl  tool.FCStd  tool.FCStd1  tool.stl
exoskeleton_description/robots/: exo_simple.urdf.xacro
exoskeleton_description/urdf/: exo.gazebo.xacro  exo.transmission.xacro  exo.urdf  exo_left.urdf.xacro  exo_left.xacro
exoskeleton_description/urdf/arm/: arm.gazebo.xacro  arm.transmission.xacro  arm.urdf.xacro
exoskeleton_description/urdf/base/: base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro
exoskeleton_gazebo/: CMakeLists.txt  package.xml
exoskeleton_gazebo/config/: exo_config.rviz
exoskeleton_gazebo/launch/: exo_gazebo.launch  exo_world.launch
exoskeleton_scene/: CMakeLists.txt  package.xml
exoskeleton_scene/launch/: start_scene.launch
