<?xml version="1.0"?>
<package format="2">
  <name>exoskeleton_gazebo</name>
  <version>1.4.0</version>
  <description>This package allows to load a exoskeleton_gazebo in Gazebo Simulation</description>
  <maintainer email="kaartemov@gmail.com">Kirill Artemov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>exoskeleton_description</depend>
  <depend>gazebo_ros</depend>

</package>
